<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".AddMedia">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/add_title_prompt"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/add_title_entry"
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/add_title_prompt"
        android:singleLine="true"
        android:hint="@string/title_hint"
        android:inputType="text"/>

    <TextView
        android:id="@+id/add_artist_prompt"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_title_prompt"
        android:padding="12dp"
        android:text="@string/artist" />

    <EditText
        android:id="@+id/add_artist_entry"
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_title_prompt"
        android:layout_toEndOf="@id/add_artist_prompt"
        android:singleLine="true"
        android:hint="@string/artist_hint"
        android:inputType="text"/>

    <TextView
        android:id="@+id/add_description_prompt"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_artist_prompt"
        android:padding="12dp"
        android:text="@string/enter_description" />

    <EditText
        android:id="@+id/add_description_entry"
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_artist_prompt"
        android:layout_toEndOf="@id/add_description_prompt"
        android:lines="4"
        android:gravity="start"
        android:hint="@string/artist_hint" />

    <TextView
        android:id="@+id/add_cover_prompt"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_description_entry"
        android:padding="12dp"
        android:text="@string/cover_prompt" />

    <RadioGroup
        android:id="@+id/add_cover_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/add_description_entry"
        android:layout_toEndOf="@id/add_cover_prompt">

        <RadioButton
            android:id="@+id/select_audiobook"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/audiobook"/>

        <RadioButton
            android:id="@+id/select_podcast"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/headphone"/>

    </RadioGroup>

    <TextView
        android:id="@+id/add_audiobook_prompt"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_cover_group"
        android:padding="12dp"
        android:text="@string/audiobook_prompt" />

    <CheckBox
        android:id="@+id/is_audiobook_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/add_cover_group"
        android:layout_toEndOf="@id/add_audiobook_prompt"/>

        <Button
            android:id="@+id/submit_media_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_media"
            android:textColor="@color/colorPrimaryTextLight"
            android:layout_below="@id/is_audiobook_check"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</ScrollView>